# openapi/openapi.yaml
@@ -160,6 +160,30 @@ paths:
           description: User deleted successfully
         '404':
           description: User not found
+  /users/{id}/tasks:
+    get:
+      summary: Get all tasks for a specific user
+      operationId: GetUsersIdTasks  # ← ВАЖНО ДОБАВИТЬ!
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+          description: ID of the user
+      responses:
+        '200':
+          description: A list of user's tasks
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
+        '404':
+          description: User not found
 
 components:   #Описание всех структурных данных
   schemas:
